Make sure manual upgrade notice is visible.

--- a/resources/css/awpcp-admin.css
+++ b/resources/css/awpcp-admin.css
@@ -98,6 +98,9 @@
   -moz-border-radius: 3px;
   border-radius: 3px;
 }
+.awpcp-update-nag {
+  display: inline-block !important;
+}
 .awpcp-sticky-notice {
   text-align: left;
 }
