--- a/resources/less/legacy/admin.less
+++ b/resources/less/legacy/admin.less
@@ -115,6 +115,10 @@
     border-radius: 3px;
 }
 
+.awpcp-update-nag {
+    display: inline-block !important;
+}
+
 .awpcp-sticky-notice {
     text-align: left;
 }
